--- a/test/fixtures/catalogs.yml
+++ b/test/fixtures/catalogs.yml
@@ -1,9 +1,9 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  name: MyString
-  description: MyText
+  name: Ratata
+  description: Mouse Pokemon
 
 two:
-  name: MyString
-  description: MyText
+  name: Caterpie
+  description: Worm Pokemon
